--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
-    <link rel="favicon" href="favicon.ico" />
+
+    <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <title>Facebook</title>
   </head>
   <body>
